argocd/platform/stalwart/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart
  namespace: stalwart
spec:
  hostnames:
    - stalwart.home.arpa
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway
      name: external
      sectionName: stalwart-https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: stalwart
          port: 8080
