argocd/platform/stalwart/resources/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stalwart
  namespace: stalwart
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: stalwart
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 25
        - protocol: TCP
          port: 465
        - protocol: TCP
          port: 587
        - protocol: TCP
          port: 993
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 25
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
